--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.2",
+    "@react-three/fiber": "^9.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -23,6 +25,7 @@
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
